2008-04-04  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCell.cs: Respect DataGridView.GridColor.

2008-04-03  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs: Invalidate when the alpha channel is less than 255,
	not only when control is transparent.

2008-04-03  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewRowPrePaintEventArgs.cs, DataGridViewRowPostPaintEventArgs.cs:
	Implement some painting convenience methods that threw NIEX.

2008-04-03  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridView.cs: Call CellMouse[Enter|Move|Leave] properly.
	* DataGridViewLinkCell.cs: Implement.

2008-04-03  Ivan N. Zlatev  <contact@i-nz.net>

	* GridEntry.cs: Report the conversion exception error description.
	[Fixes bug #375792]

2008-04-03  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGridView.cs: Do not scroll to item on resize.
	[Fixes bug #375789]

2008-04-02  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingContext.cs: When retrieving a BindingManagerBase, if the
	dataSource parameter is ICurrencyManagerProvider, then return
	ICurrencyManagerProvider.CurrencyManager/GetRelatedCurrencyManager
	instead of creating a new one.

2008-04-02  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingSource.cs: Implement support for Type instances as
	DataSource.

2008-04-02  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridView.cs: Minor cleanups and call CellMouseUp.
	* DataGridViewCell.cs: Make some painting routines internally virtual.
	* DataGridViewButtonCell.cs: Implement.

2008-04-02  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs: We always need to invalidate our children with
	transparent backgrounds when we are invalidated.
	[Fixes bug #376081]

2008-04-01  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingSource.cs: EndEdit and CancelEdit should call EndCurrentEdit
	and CancelCurrentEdit on CurrencyManager respectively. Implement
	support for ICancelAddNew too.

2008-04-01  Carlos Alberto Cortez <calberto.cortez@gmail.com>
